responsive design finished

--- a/css/components.css
+++ b/css/components.css
@@ -23,12 +23,12 @@
     font-size: 1.8rem;
 }
 
-.btn-primary:hover{
-   background-color: var(--pink-20);
+.btn-primary:hover {
+    background-color: var(--pink-20);
 }
 
 .item-digital {
-    flex-grow: 1;
+    width: 100%;
     max-width: 38.4rem;
 }
 
@@ -90,4 +90,26 @@
 .card-post .text p {
     font-size: 1.6rem;
     color: var(--gray-600);
+}
+
+@media(max-width: 991px) {
+    .item-digital {
+        text-align: center;
+    }
+
+    .item-digital .icon {
+        margin: 0 auto;
+        margin-bottom: 1.6rem;
+    }
+
+    .item-digital .icon p br {
+        display: none;
+    }
+}
+
+@media(max-width: 560px) {
+    .item-digital .info p {
+        font-size: 1.8rem;
+        max-width: 31.9rem;
+    }
 }
