--- a/css/main.css
+++ b/css/main.css
@@ -76,14 +76,23 @@ header nav ul a:hover {
 
 .s-hero .text h1::before {
     content: "";
-    width: 100%;
     max-width: 59.9rem;
     height: 2.2rem;
-    background: url("../img/line-title.svg") no-repeat center center;
+    background: url("../img/line-title.svg") no-repeat left center;
     position: absolute;
     left: 3.9rem;
     bottom: -0.5rem;
     z-index: -1;
+    animation: drawLine .5s .5s ease-in forwards;
+}
+
+@keyframes drawLine {
+    from {
+        width: 0;
+    }
+    to {
+        width: 100%;
+    }
 }
 
 .s-hero .text p {
@@ -99,7 +108,20 @@ header nav ul a:hover {
     position: absolute;
     bottom: 1.7rem;
     left: 5.5rem;
+    animation: floating 3s ease-in-out infinite;
 }
+
+@keyframes floating {
+    0%{
+        transform: translateX(0px);
+    }
+    50% {
+        transform: translateX(15px);
+    }
+    100%{
+        transform: translateX(0px);
+    }
+} 
 
 .s-hero .ilustra {
     padding: 0 1.5rem;
